k3s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tiles-loadtest
  labels:
    app: tiles
    environment: loadtest
