k3s/celery-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-beat
  namespace: tiles-loadtest
  labels:
    app: celery-beat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-beat
  template:
    metadata:
      labels:
        app: celery-beat
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: celery-beat
          image: tiles-loadtest:latest
          imagePullPolicy: Never
          command:
            - celery
            - -A
            - app.tasks.celery_app
            - beat
            - --loglevel=info
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 500m
